# NativeProbe

./: .gitignore  .replit  README.md  REAL_DATA_GUIDE.md  USER_MANUAL .md  USER_MANUAL.md  app.py  build_executable.py  config.py  desktop_app.py  install.py  main.py  models.py  pyproject.toml
attached_assets/: Pasted-Designing-a-Comprehensive-Network-Traffic-Analysis-Application1-Introduction-The-Significance-of-N-1745959551712.txt  Pasted-Understanding-Network-Traffic-Analysis-Systems-for-Application-Development1-Introduction-to-Network-1745959581155.txt
routes/: anomaly_detection.py  dashboard.py  flow_analysis.py  packet_analysis.py  protocol_analysis.py  settings.py
static/css/: custom.css
static/js/: anomaly_detection.js  charts.js  dashboard.js  flow_analysis.js  packet_analysis.js  protocol_analysis.js
templates/: anomaly_detection.html  flow_analysis.html  index.html  layout.html  packet_analysis.html  protocol_analysis.html  settings.html
utils/: anomaly_detection.py  flow_analysis.py  packet_capture.py  protocol_dissection.py
