[project]
name = "NativeProbe"
version = "0.1.0"
description = "Cutting edge security"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "influxdb>=5.3.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyinstaller>=6.13.0",
    "pyshark>=0.6",
    "scapy>=2.6.1",
]
